Models inicials de youtube i Spotify

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-./youtube
-./spotify
+/optica/optica.drawio
+/optica/optica.mwb.bak
+/optica/optica.mwb
+/pizzeria/pizzeria.drawio
+/pizzeria/pizzeria.mwb
+/pizzeria/pizzeria.mwb.bak
